<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mcsim415.wchat.ui.home.HomeFragment"
        android:label="@string/title_home" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.mcsim415.wchat.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_server"
        android:name="com.mcsim415.wchat.ui.server.ServerFragment"
        android:label="@string/title_server"
        tools:layout="@layout/fragment_server" />

    <fragment
        android:id="@+id/navigation_client"
        android:name="com.mcsim415.wchat.ui.client.ClientFragment"
        android:label="@string/title_client"
        tools:layout="@layout/fragment_client" />
</navigation>